GPencil: Crash when sculpting after "bake object transform to grease pencil" #101370

Closed
opened 2022-09-26 05:02:44 +07:00 by Martin Simpson · 8 comments

System Information
Operating system: ubuntu 22.04
Graphics card: nvidia 1070

Blender Version
Broken: 3.3.0 public build
Worked: haven't checked

Blender crashes when using sculpt on a "bake object transform to grease pencil" result stroke.

To recreate:

  • Start with "2d animation" preset.
  • Draw anything.
  • Go to object mode and animate a translation with two keyframes.
  • Run "bake object transform to grease pencil" to convert object animation to gp frames.
  • Go to gp sculpt mode and try to sculpt the new object, blender should crash. "Grab" seems to be 100% repro, I haven't tested other operations a lot, but I think it's all of them.

Attachment:

**System Information** Operating system: ubuntu 22.04 Graphics card: nvidia 1070 **Blender Version** Broken: 3.3.0 public build Worked: haven't checked Blender crashes when using sculpt on a "bake object transform to grease pencil" result stroke. To recreate: - Start with "2d animation" preset. - Draw anything. - Go to object mode and animate a translation with two keyframes. - Run "bake object transform to grease pencil" to convert object animation to gp frames. - Go to gp sculpt mode and try to sculpt the new object, blender should crash. "Grab" seems to be 100% repro, I haven't tested other operations a lot, but I think it's all of them. Attachment: - Just open it and click the gp stroke and it should crash. [gp_crash_sculpt_grab.blend](https://archive.blender.org/developer/F13573479/gp_crash_sculpt_grab.blend)

Added subscriber: @msim

Added subscriber: @msim

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Antonio Vazquez self-assigned this 2022-09-26 10:45:49 +07:00

I can reproduce it.

I can reproduce it.
Antonio Vazquez changed title from Crash when sculpting after "bake object transform to grease pencil" to GPencil: Crash when sculpting after "bake object transform to grease pencil" 2022-09-26 11:08:45 +07:00

This issue was referenced by b266eedb24

This issue was referenced by b266eedb24216d12e7057aaaf983ae71d30d6ed7

This issue was referenced by 530b9841ee

This issue was referenced by 530b9841ee7cc8365b58d322978cb91c9c2feb52

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks for the quick fix!

Thanks for the quick fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101370
There is no content yet.