Fix T101370: GPencil Grab Sculpt crash after bake transform animation

The problem was the duplicated strokes had wrong pointers 
to the original stroke.